--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,6 +5,15 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>seriously.sexy</title>
+		<style>
+			html, body, #root {
+				display: block;
+				position: relative;
+				height: 100%;
+				width: 100%;
+				overflow: hidden;
+			}
+		</style>
 	</head>
 
 	<body>
