--- a/src/index.ejs
+++ b/src/index.ejs
@@ -11,7 +11,7 @@
 				position: relative;
 				height: 100%;
 				width: 100%;
-				overflow: hidden;
+				overflow-x: hidden;
 			}
 		</style>
 		<!-- jss-insertion-point -->
