--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,9 +9,12 @@
 			html, body, #root {
 				display: block;
 				position: relative;
-				height: 100%;
-				width: 100%;
+				min-height: 100%;
+				min-width: 100%;
 				overflow-x: hidden;
+			}
+			* {
+				position: relative;
 			}
 		</style>
 		<!-- jss-insertion-point -->
