--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,6 +2,18 @@
 
 <html>
 	<head>
+		<% if(argv.mode === "production") { %>
+			<!-- This template receives env and arvg values from Webpack, we only want Google Analytics in Prod mode -->
+			<!-- Google tag (gtag.js) -->
+			<script async src="https://www.googletagmanager.com/gtag/js?id=G-3FENXZNG5G"></script>
+			<script>
+				window.dataLayer = window.dataLayer || [];
+				function gtag(){dataLayer.push(arguments);}
+				gtag('js', new Date());
+
+				gtag('config', 'G-3FENXZNG5G');
+			</script>
+		<% } %>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>seriously.sexy</title>
