remove last class component, add favicon and meta description, remove extra script call

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,6 +16,9 @@
 		<% } %>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="I am Elijah Greene and this is my personal website and digital software development resume.">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<title>seriously.sexy</title>
 		<style>
 			html, body, #root {
@@ -35,6 +38,5 @@
 	<body>
 		<div id="root"></div>
 		<noscript>You need to enable JavaScript to view this site.</noscript>
-		<script src="../dist/bundle.js"></script>
 	</body>
 </html>
