changed platform color, also added hard-coded bg color to html element to try to stop white flash on load

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -21,6 +21,7 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<title>seriously.sexy</title>
 		<style>
+			html { background: #181401 }
 			html, body, #root {
 				display: block;
 				position: relative;
